# fantasy_rice

./: TODO.md  flake.nix  pubspec.yaml  test.bash
assets/: rice_btn_slot_lock.png~  rice_slot_bg.png~  rice_top_bg.png~
fantasy_borders/: .gitignore  CMakeLists.txt  flake.nix  result
fantasy_borders/src/: borderDeco.cpp  borderDeco.hpp  main.cpp
fantasy_rice/: pubspec.yaml
fantasy_rice/assets/unused/: rice_btn_slot_poweroff.png~
fantasy_rice/lib/: main.dart
fantasy_rice/lib/dbus/: notifications_object.dart
fantasy_rice/lib/models/: overlay.dart
fantasy_rice/lib/providers/: hyprland_ipc.dart  hyprland_ipc.g.dart  notifications.dart  notifications.freezed.dart  pc_info.dart  pc_info.freezed.dart  pc_info.g.dart  toplevel_textures.dart  toplevel_textures.freezed.dart  toplevel_textures.g.dart
fantasy_rice/linux/runner/: CMakeLists.txt  my_application.cc
fantasy_rice/shaders/: perspective_shader.frag
fantasy_rice_bottom/: README.md  flake.nix  pubspec.yaml
fantasy_rice_bottom/lib/: main.dart
fantasy_rice_bottom/lib/providers/: toplevel_textures.dart  toplevel_textures.g.dart
fantasy_rice_bottom/lib/widgets/: fire.dart
fantasy_rice_bottom/linux/: CMakeLists.txt
fantasy_rice_bottom/linux/runner/: CMakeLists.txt  my_application.cc
lib/: main.dart
lib/dbus/: notifications_object.dart
lib/providers/: notifications.dart  notifications.freezed.dart  notifications.g.dart  toplevel_textures.dart  toplevel_textures.g.dart
lib/utils/: use_delta_ticker.dart
linux/: CMakeLists.txt
shaders/: balatro_3d.frag
test/: widget_test.dart
(+30 files in other folders)
