cmake_minimum_required(VERSION 3.27)

project(fantasy_borders
    DESCRIPTION "fantasy_borders plugin for Hyprland"
    VERSION 0.1
)

set(CMAKE_CXX_STANDARD 23)

file(GLOB_RECURSE SRC "*.cpp")

add_library(fantasy_borders SHARED ${SRC})

find_package(PkgConfig REQUIRED)
pkg_check_modules(deps REQUIRED IMPORTED_TARGET
    hyprland
    libdrm
    libinput
    libudev
    pangocairo
    pixman-1
    wayland-server
    xkbcommon
)
target_link_libraries(fantasy_borders PRIVATE rt PkgConfig::deps)

install(TARGETS fantasy_borders)